Basic setup for datatable

--- a/table.htm
+++ b/table.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="css/my.css" />
 </head>
 <body>    
@@ -11,7 +12,7 @@
         <div class="row">
             <table id="mytable" class="table">
                 <thead>
-                    <tr>a</tr><tr>b</tr><tr>c</tr>
+                    <th>a</th><th>b</th><th>c</th>
                 </thead>
                 <tbody>
                     <td>1</td><td>2</td><td>3</td>
@@ -22,6 +23,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="js/my.js"></script>
 </body>
 </html>
