Added files for Multiselect

--- a/table.htm
+++ b/table.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="css/jquery.dataTables.css" />
     <link rel="stylesheet" href="css/my.css" />
 </head>
 <body>    
@@ -10,7 +10,7 @@
             <h2>Table Demo</h2>
         </div>
         <div class="row">
-            <table id="mytable" class="table">
+            <table id="mytable" class="table hover">
                 <thead>
                     <th>a</th><th>b</th><th>c</th>
                 </thead>
@@ -21,9 +21,9 @@
         </div>       
     </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/vendor/jquery-3.3.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="js/vendor/jquery.dataTables.js"></script>
     <script src="js/my.js"></script>
 </body>
 </html>
